chore: remove fixed versions from install guides

--- a/apps/website/src/pages/docs/core/installation/cra-guide.mdx
+++ b/apps/website/src/pages/docs/core/installation/cra-guide.mdx
@@ -11,13 +11,13 @@ tags: ['create-react-app']
 Inside your CRA project directory, install Chakra UI by running either of the
 following:
 
-```bash
-npm i @saas-ui/react @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
-```
-
-```bash
-yarn add @saas-ui/react @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
-```
+<PackageManagers
+  command={{
+    npm: 'npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    yarn: 'yarn add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    pnpm: 'pnpm add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+  }}
+/>
 
 ### 2. Provider Setup
 
