--- a/apps/website/src/pages/docs/core/installation/remix-guide.mdx
+++ b/apps/website/src/pages/docs/core/installation/remix-guide.mdx
@@ -9,13 +9,13 @@ tags: ['remix']
 Inside your `Remix` project root directory, install Saas UI by running either
 of the following:
 
-```bash
-npm i @saas-ui/react @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6 @emotion/server@^11
-```
-
-```bash
-yarn add @saas-ui/react @chakra-ui/react @emotion/react@^11 @emotion/styled@^11 framer-motion@^6 @emotion/server@^11
-```
+<PackageManagers
+  command={{
+    npm: 'npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    yarn: 'yarn add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    pnpm: 'pnpm add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+  }}
+/>
 
 ### 2. Provider Setup
 
