--- a/apps/website/src/pages/docs/core/installation/nextjs-pages-guide.mdx
+++ b/apps/website/src/pages/docs/core/installation/nextjs-pages-guide.mdx
@@ -8,13 +8,13 @@ tags: ['nextjs']
 
 In your Next.js project, install Saas UI by running either of the following:
 
-```bash
-npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
-```
-
-```bash
-yarn add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react@^11 @emotion/styled@^11 framer-motion@^6
-```
+<PackageManagers
+  command={{
+    npm: 'npm i @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    yarn: 'yarn add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+    pnpm: 'pnpm add @saas-ui/react @chakra-ui/react @chakra-ui/next-js @emotion/react @emotion/styled framer-motion',
+  }}
+/>
 
 ### 2. Provider Setup
 
