chore:  add dependabot guides and update installation guides

--- a/apps/website/src/pages/docs/pro/overview.mdx
+++ b/apps/website/src/pages/docs/pro/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Pro
-description: A modern clean dashboard ui that your customers will love.
+description: A modern clean dashboard UI for B2B SaaS and internal tools.
 ---
 
 <Info>
