--- a/apps/website/src/pages/docs/pro/installation/clone-repository.mdx
+++ b/apps/website/src/pages/docs/pro/installation/clone-repository.mdx
@@ -48,10 +48,23 @@ so at some point it might be easier to manually copy over any changes that you w
 
 ## Install dependencies
 
-This project uses `yarn 3` to manage dependencies, you can install all dependencies using the following command:
+This project uses `yarn 4` to manage dependencies, you can install all dependencies using the following command:
 
 ```bash
 yarn
+```
+
+Yarn is shipped with the repository, so you don't need to install it globally.
+If you run into installation issues, you can try to install the latest version of Yarn using the following command:
+
+```bash
+yarn set version latest
+```
+
+In case this doesn't work, enable corepack and run `yarn` again.
+
+```bash
+corepack enable
 ```
 
 ## PNPM support
@@ -65,6 +78,18 @@ packages:
   - 'apps/*'
   - 'packages/*'
   - 'saas-ui/*'
+```
+
+The recommended way to install PNPM is using `corepack`, you can enable `corepack` using the following command:
+
+```bash
+corepack enable
+```
+
+Install PNPM:
+
+```bash
+corepack prepare pnpm@latest --activate
 ```
 
 Then run the following command to install all dependencies:
