fix: context menu placement

--- a/apps/website/src/pages/docs/components/overlay/context-menu/usage.mdx
+++ b/apps/website/src/pages/docs/components/overlay/context-menu/usage.mdx
@@ -28,6 +28,7 @@ import {
   ContextMenu,
   ContextMenuTrigger,
   ContextMenuList,
+  ContextMenuItem,
 } from '@saas-ui/react'
 
 export default function Page() {
