--- a/apps/website/src/pages/docs/core/integrations/clerk.mdx
+++ b/apps/website/src/pages/docs/core/integrations/clerk.mdx
@@ -32,7 +32,7 @@ A full working example can be found in the [examples](https://github.com/saas-js
 ## Installation
 
 ```bash
-yarn add @clerk/clerk-react @saas-ui/clerk
+yarn add @clerk/clerk-react @saas-ui/clerk @saas-ui/auth
 ```
 
 ## Import
@@ -53,7 +53,7 @@ Add `ClerkAuthProvider` to the root of your app and configure the auth service.
 </Info>
 
 ```tsx
-import { AuthProvider } from '@saas-ui/react'
+import { AuthProvider } from '@saas-ui/auth'
 import { ClerkAuthProvider } from '@saas-ui/clerk'
 
 // You can find the publishable key in the Clerk dashboard.
