chore: update docs

--- a/apps/website/src/pages/docs/components/navigation/hotkeys/props.mdx
+++ b/apps/website/src/pages/docs/components/navigation/hotkeys/props.mdx
@@ -13,6 +13,10 @@ scope: props
 
 `useHotkeysShortcut` accepts a `string` with the shortcut or a key combination and a callback function `(e: KeyboardEvent) => void`
 
+### Hotkey Props
+
+<PropsTable of="Hotkey" />
+
 ### HotkeysList Props
 
 <PropsTable of="HotkeysList" />
