--- a/apps/website/src/pages/docs/components/navigation/hotkeys/usage.mdx
+++ b/apps/website/src/pages/docs/components/navigation/hotkeys/usage.mdx
@@ -1,11 +1,11 @@
 ---
 id: hotkeys
 title: Hotkeys
-description: Keyboard shortcuts for modern apps
+description: Hotkeys are a series of one or several keys that trigger an action when pressed.
 ---
 
-Keyboard shortcuts are an excellent way to support advanced users
-in your app to be more productive.
+Keyboard shortcuts enable keyboard users to invoke commands using the keyboard that would otherwise require accessing a menu or using touch or a mouse.
+This enables sighted and advanced users to quickly navigate and interact with your app.
 
 As you add more shortcuts to you app you can run into conflicts,
 it can become a big mess if you don't keep track of which hotkeys are used and where.
@@ -317,3 +317,11 @@ export default function HotkeysListModal() {
   )
 }
 ```
+
+## Accessibility
+
+The `Hotkey` component will add the `aria-keyshortcuts` attribute to the wrapped element. This attribute is used by screen readers to announce the available keyboard shortcuts. Short hand keys like `⌘` or `?` will be expanded to `Meta` and `Shift+/` respectively.
+
+The hotkeys config can be used to display a list of available shortcuts in your app for discoverability.
+
+More info: https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-keyshortcuts
