chore: fix typo

--- a/apps/website/src/pages/docs/core/installation/nextjs-pages-guide.mdx
+++ b/apps/website/src/pages/docs/core/installation/nextjs-pages-guide.mdx
@@ -53,7 +53,7 @@ const NextLink = React.forwardRef<HTMLAnchorElement, LinkProps>(
 
 function MyApp({ Component, pageProps }) {
   return (
-    <SaasProvider linkComponent={Link}>
+    <SaasProvider linkComponent={NextLink}>
       <Component {...pageProps} />
     </SaasProvider>
   )
